--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,4 @@ test:
 #
 production:
   <<: *default
-  database: Pinnacle_production
-  username: Pinnacle
-  password: <%= ENV["PINNACLE_DATABASE_PASSWORD"] %>
+  url: <%= ENV["DATABASE_URL"] %>
